# mind-renderer

./: .env.template  .flake8  .gitignore  README.md  pyproject.toml  story_gen_config.yaml
.github/workflows/: tests.yml
mind_renderer/: cli.py
mind_renderer/core/: audio.py  entities.py  story_generators.py  video.py
mind_renderer/utils/: config_loader.py  custom_lm.py  deepseek_lm.py  image_processing.py  logger.py
tests/core/: test_video.py
tests/utils/: test_config_loader.py  test_custom_lm.py  test_deepseek_lm.py
